--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "highlight.js": "^10.2.0",
+    "markdown-it": "^11.0.0",
+    "marked": "^1.1.1",
+    "string": "^3.3.3",
+    "uslug": "^1.0.4",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +25,27 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-anchor": "^5.3.0",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-graphviz": "^1.1.2",
+    "markdown-it-highlightjs-external": "^1.0.1",
+    "markdown-it-images-preview": "^1.0.1",
+    "markdown-it-ins": "^3.0.0",
+    "markdown-it-katex-external": "^1.0.0",
+    "markdown-it-latex": "^0.2.0",
+    "markdown-it-mark": "^3.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-toc": "^1.1.0",
+    "markdown-it-toc-done-right": "^4.1.0",
+    "mavon-editor": "^2.9.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -32,7 +60,14 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-empty": [
+        "error",
+        {
+          "allowEmptyCatch": true
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
